@@ -8,7 +8,7 @@ cmake_minimum_required (VERSION 2.8)
 project(oriflamms)
 set(ORIFLAMMS_PACKAGE_VERSION_MAJOR "0")
 set(ORIFLAMMS_PACKAGE_VERSION_MINOR "5")
-set(ORIFLAMMS_PACKAGE_VERSION_PATCH "4")
+set(ORIFLAMMS_PACKAGE_VERSION_PATCH "5")
 set(ORIFLAMMS_PACKAGE_VERSION "${ORIFLAMMS_PACKAGE_VERSION_MAJOR}.${ORIFLAMMS_PACKAGE_VERSION_MINOR}.${ORIFLAMMS_PACKAGE_VERSION_PATCH}")
 
 if(MSVC)
