@@ -1,3 +1,6 @@
+2015-11-27 Yann LEYDIER <yann@leydier.info>
+	* Document (readTextWElements): Added support for <lb> @type="rejet".
+
 2015-11-26 Yann LEYDIER <yann@leydier.info>
 	* GUI (go_to): Added.
 	* GUI (find_string, display_search): Bugfix.
